--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "goit-js-course",
   "version": "1.0.0",
-  "description": "",
+  "description": "Всі матеріали уроків ви знайдете в [гілках (branches)](https://github.com/maplemap/goit-js-course/branches) цього репозиторія",
   "main": "index.js",
   "scripts": {
     "start": "NODE_ENV=development webpack --mode=development",
